--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,14 @@ body {
 	min-width: 1185px;
 }
 .container {
-	display: flex;
-	align-items: center;
-	height: 100%;
+	/* display: flex;
+	align-items: center; */
+	/* margin-top: 100px; */
+	/* margin: auto; */
+	/* height: 100vh; */
 	padding-left: 10%;
 	padding-right: 10%;
+	/* overflow: hidden; */
 }
 .demonstration {
 	position: relative;
