--- a/css/style.css
+++ b/css/style.css
@@ -342,3 +342,16 @@ li {
 	height: 47px;
 }
 
+.language {
+	/* display: block; */
+	font-size: 20px;
+	text-decoration: none;
+	border-bottom: 2px solid black;
+	padding-bottom: 2px;
+	color: rgb(32, 28, 31);
+}
+.language:hover {
+	transition: 1s all;
+	color: brown;
+	border-bottom: 2px solid rgb(255, 0, 0);
+}
